# roxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  reminder_worker.py  todo.todo
.github/workflows/: test-build-push.yml
docs/superpowers/plans/: 2026-07-19-sqlite-message-storage.md
docs/superpowers/specs/: 2026-07-19-sqlite-message-storage-design.md  2026-07-20-script-organization-design.md
scripts/: build-and-push.sh  docker-entrypoint.sh  start.sh
src/: app.py  config.py  worker.py
src/handlers/: chat.py  commands.py
src/prompts/: system.py
src/services/: expense_errors.py  expense_models.py  expense_tracker_client.py
src/tools/: __init__.py  expenses.py  manage_tasks.py  registry.py  schedule_task.py
src/utils/: __init__.py  dates.py  debounce.py  errors.py  expense_formatting.py  expense_state.py  history.py  llm.py  logging.py  tasks.py  transcription.py
tests/: test_app.py  test_chat.py  test_commands.py  test_debounce.py  test_errors.py  test_expenses.py  test_history.py  test_logging.py  test_tasks.py  test_web.py  test_worker.py
